--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<html>
-	<head>
-		<meta charset="UTF-8">
-	</head>
-	<body>
-		<script>
-			document.location = 'en.html';
-		</script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.2f16f862.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Amedeo Zucchetti</title>
+    <script type="module" crossorigin src="/assets/index.b22db0e6.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.bffa0c96.js">
+    <link rel="stylesheet" href="/assets/index.c7afb99b.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
 </html>
