--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.2f16f862.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="./static/favicon.ico" />
+    <link rel="stylesheet" href="./static/css/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <title>Amedeo Zucchetti</title>
-    <script type="module" crossorigin src="/assets/index.ded582b5.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.bffa0c96.js">
-    <link rel="stylesheet" href="/assets/index.1ead4742.css">
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
+  <script src="./static/js/main.js"></script>
 </html>
